force-app/main/default/objects/Legal_advisor__c/Legal_advisor__c.object-meta.xml
<CustomObject>
    <label>Legal Advisor</label>
    <nameField>
        <label>Legal advisor Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Legal_Advisors</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>