force-app/main/default/objects/Legal_advisor__c/fields/AccountName__c.field-meta.xml
<CustomField>
    <fullName>AccountName__c</fullName>
    <label>Account Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>