force-app/main/default/objects/Legal_advisor__c/fields/AccountStatus__c.field-meta.xml
<CustomField>
    <fullName>AccountStatus__c</fullName>
    <label>Account Status</label>
    <length>50</length>
    <type>Text</type>
</CustomField>