force-app/main/default/objects/Legal_advisor__c/fields/AsOfDate__c.field-meta.xml
<CustomField>
    <fullName>AsOfDate__c</fullName>
    <label>As of Date</label>
    <type>Date</type>
</CustomField>