force-app/main/default/objects/Legal_advisor__c/fields/Number_of_Clients__c.field-meta.xml
<CustomField>
    <fullName>Number_of_Clients__c</fullName>
    <label>Number of Clients</label>
    <summaryForeignKey>Client__c.AccountNumber__c</summaryForeignKey>
    <summaryOperation>count</summaryOperation>
    <type>Summary</type>
</CustomField>