force-app/main/default/objects/Legal_advisor__c/listViews/Advisor_and_clients.listView-meta.xml
<ListView>
    <fullName>Advisor_and_clients</fullName>
    <columns>NAME</columns>
    <columns>AccountStatus__c</columns>
    <columns>Number_of_Clients__c</columns>
    <filterScope>Mine</filterScope>
    <label>Advisor and clients</label>
</ListView>